--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body> 
     <h1>Verificador dos números faltantes do CPF</h1>
+    <p id = 'result'></p>
     <script src="script.js"></script>
 </body>
 </html>
