--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <p id = 'result'></p>
     <script src="script.js"></script>
 </body>
+<participants>
+    <p>Emanuel Ribeiro, Adler, Arthur Mendes</p>
+</participants>
 </html>
